# sixtyfps-debugassert

./: Cargo.toml  build.rs
src/: main.rs
src/ui/: mainwindow.60
