[package]
name = "sixtyrepro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = { git = "https://github.com/sixtyfpsui/sixtyfps.git", default-features = false, features = ["backend-qt"] }

[build-dependencies]
sixtyfps-build = { git = "https://github.com/sixtyfpsui/sixtyfps.git" }
